# cicdtox

./: .coverage  .gitignore  README.md  coverage.xml  parsing.py  pyproject.toml  setup.cfg  test.py  tox.ini
.github/workflows/: main.yaml
src/exparse/: __init__.py  parsing.py
tests/: .coverage  test.py  test_1.py
