[bumpversion]
current_version = 0.0.3
commit = True
tag = False

[metadata]
name = exparse
description = An expression parser
version = '0.0.2'
author = Vitor Pereira
license = GNUv3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages = 
	exparse
install_requires = 
	requests>=2
python_requires = >=3.6
package_dir = 
	=src
zip_safe = no

[options.extras_require]
testing = 
	pytest>=6.0
	pytest-cov>=2.0
	mypy>=0.910
	flake8>=3.9
	tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160

[bumpversion:file:setup.cfg]
search = version = '{current_version}'
replace = version = '{new_version}'

[bumpversion:file:src/exparse/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'
